--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
   
@@ -31,11 +33,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://orangedigitalcenter.sn/sonatel-academy/">
+                    <a href="https://mobiri.se">
                         <img src="assets/images/logo-sa.jpeg.jpg" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://www.bing.com/search?q=javascript&cvid=dcb8523385c24d6fa0b6d9a1aff70e27&aqs=edge.3.69i57j69i59j0j46j0l2j69i60l3.5848j0j4&FORM=ANAB01&PC=U531">TP JavaScript</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-5" href="https://mobiri.se">TP JavaScript</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -46,11 +48,10 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/test.html">TP1&nbsp;</a></li>
-                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/Apprentissage.html">TP2</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP2JS2.html">TP3</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP4.html">TP4</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP4.html">TP5</a></li>
-                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP6%20JAVASCRIPT.html">TP6</a>
-                    </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP6%20JAVASCRIPT.html">TP7</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="file:///C:/Users/lenovo/Downloads/JAVASCRIPT/TP7%20JAVASCRIPT.html">TP8</a></li></ul>
-                
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-7" href="TP1.html">TP1&nbsp;</a></li>
+                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="TP2.html">TP2</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="TP3.html">TP3</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="TP4.html">TP4</a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="TP5\TPQUIZZ.html">TP5</a></li>
+                    <li class="nav-item"><a class="nav-link link text-primary display-7" href="TP6.html">TP6</a>
+                    </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="TP7\APIFILM.html">TP7</a></li>
                 
             </div>
         </div>
@@ -134,7 +135,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="Mobirise.com" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built by Gabar &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">Free HTML5 Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
